# scExtract

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pipelines.py  pipelines_annotate.py  pyproject.toml  requirements.txt
Snakemake/auto_extract/: auto_extract.smk  config_sample.yaml
Snakemake/auto_extract_bench/: auto_extract_bench.smk  bench_embedding.smk  bench_with_ols.smk  config_sample.yaml  repeat_auto_extract.smk
Snakemake/auto_integrate/: auto_integrate.smk  config_sample.yaml
auto_extract/: agent.py  annotation.py  auto_extract.py  claude3.py  config.py  config_sample.py  get_metadata.py  parse_params.py  preprocess.py
benchmark/: benchmark.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  notebooks.rst  tutorials.rst  usage.rst
docs/source/_notebooks/: batch_10X.ipynb  batch_csv.ipynb  single_10X.ipynb  single_txt.ipynb
integration/: extract_celltype_embedding.py  integrate.py
methods_comparison/: singler_anno.py
scextract/: main.py
src/auto_extract/: agent.py  auto_extract.py  get_metadata.py  parse_params.py  preprocess.py
src/benchmark/: benchmark.py
src/integration/: extract_celltype_embedding.py  integrate.py
src/methods_comparison/: celltypist_anno.py  sctype_anno.py
src/scextract/: __init__.py  main.py
src/scextract/auto_extract/: agent.py  annotation.py  auto_extract.py  parse_params.py  preprocess.py
src/scextract/benchmark/: benchmark.py
src/scextract/integration/: extract_celltype_embedding.py  integrate.py
src/scextract/methods_comparison/: celltypist_anno.py  sctype_anno.py  singler_anno.py
src/scextract/utils/: config_template.ini  init_project.py  parse_args.py  prompts.py  utils.py
src/utils/: config_template.ini  parse_args.py  prompts.py  utils.py
tests/: benchmark_test.py  long_article_test.py  singler_test.py
utils/: config_template.ini  parse_args.py  prompts.py  utils.py
