[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scExtract"
version = "0.1.1"
description = "Automatically processing single-cell data from articles"
readme = "README.md"
authors = [
    {name = "Yuxuan George Wu", email = "yxwucq@outlook.com"},
]
keywords = ["single-cell", "data-processing", "bioinformatics"]
dependencies = [
    "anndata>=0.10.7",
    "anthropic>=0.25.1",
    "colorama>=0.4.6",
    "defusedxml>=0.7.1",
    "harmonypy>=0.0.9",
    "leidenalg>=0.10.2",
    "louvain>=0.8.2",
    "mygene>=3.2.2",
    "oaklib>=0.6.3",
    "openai>=1.17.0",
    "pyfiglet>=1.0.2",
    "pypdf>=4.2.0",
    "scanpy>=1.10.1",
    "singler>=0.1.2",
    "singlecellexperiment>=0.4.4",
    "tabulate>=0.9.0",
    "termcolor>=2.4.0",
    "tqdm>=4.66.2",
    "chardet>=5.0.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
scExtract = "scextract.main:main"

[ project.urls ] 
Repository = "https://github.com/yxwucq/scExtract.git" 

[tool.setuptools.packages.find]
where = ["src"]
include = ["auto_extract*", "benchmark*", "integration*", "methods_comparison*", "scextract*", "utils*"]
exclude = ["tests*"]